kubernetes/apps/postgres-operator/app/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-operator
  namespace: cnpg-operator
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/cnpg-operator: "true"
      ports:
        - port: 8000
          protocol: TCP
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/cnpg-operator: "true"
      ports:
        - port: 8000
          protocol: TCP
